[gd_scene load_steps=7 format=2]

[ext_resource path="res://scripts/EnemyRat.gd" type="Script" id=1]
[ext_resource path="res://sprites/rat.png" type="Texture" id=2]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ SubResource( 1 ) ],
"loop": true,
"name": "Walking",
"speed": 5.0
}, {
"frames": [  ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 5, 4.5 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 7.9626, 5.47614 )

[node name="EnemyRat" type="KinematicBody2D" groups=["Enemies"]]
collision_layer = 4
collision_mask = 3
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 2 )
animation = "Walking"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -1.5 )
shape = SubResource( 3 )

[node name="HoleDetect" type="RayCast2D" parent="."]

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0

[node name="StunHurtbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StunHurtbox"]
position = Vector2( -0.00196862, -2.37954 )
shape = SubResource( 4 )

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="body_entered" from="StunHurtbox" to="." method="_on_StunHurtbox_body_entered"]
